force-app/main/default/objects/XRPForSalesforceSettings__c/XRPForSalesforceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>XRPForSalesforceSettings</label>
</CustomObject>