force-app/main/default/objects/XRPForSalesforceSettings__c/fields/AssetTokensInitialized__c.field-meta.xml
<CustomField>
    <fullName>AssetTokensInitialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssetTokensInitialized</label>
    <type>Checkbox</type>
</CustomField>