force-app/main/default/objects/XRPForSalesforceSettings__c/fields/XRPSiteDomainUrl__c.field-meta.xml
<CustomField>
    <fullName>XRPSiteDomainUrl__c</fullName>
    <label>XRPSiteDomainUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>