force-app/main/default/objects/XRPForSalesforceSettings__c/fields/XRPWebhookApiKey__c.field-meta.xml
<CustomField>
    <fullName>XRPWebhookApiKey__c</fullName>
    <label>XRPWebhookApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>