force-app/main/default/objects/XRPForSalesforceSettings__c/fields/XRPWebhookApiSecret__c.field-meta.xml
<CustomField>
    <fullName>XRPWebhookApiSecret__c</fullName>
    <label>XRPWebhookApiSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>