force-app/main/default/objects/XRPForSalesforceSettings__c/fields/XRPWebhookBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>XRPWebhookBaseUrl__c</fullName>
    <description>Base endpoint for XRP Payments API</description>
    <label>XRP Payments API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>