force-app/main/default/objects/XRPForSalesforceSettings__c/fields/XRPWebhookId__c.field-meta.xml
<CustomField>
    <fullName>XRPWebhookId__c</fullName>
    <label>XRPWebhookId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>